tests/golden/policies/kyverno/kyverno/02_clusterrolebinding-kyverno-policies.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: kyverno
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/part-of: syn
  name: kyverno:policies
  namespace: syn-kyverno
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kyverno:policies
subjects:
  - kind: ServiceAccount
    name: kyverno-service-account
    namespace: syn-kyverno
