tests/golden/policies/kyverno/kyverno/02_service-kyverno-svc-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kyverno
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/part-of: syn
  name: kyverno-svc-metrics
  namespace: syn-kyverno
spec:
  ports:
    - name: metrics-port
      port: 8000
      targetPort: metrics-port
  selector:
    app: kyverno
    app.kubernetes.io/name: kyverno
