tests/golden/policies/kyverno/kyverno/02_service-kyverno-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kyverno
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/part-of: syn
  name: kyverno-svc
  namespace: syn-kyverno
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
  selector:
    app: kyverno
    app.kubernetes.io/name: kyverno
