tests/golden/policies/kyverno/kyverno/02_serviceaccount-kyverno-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: kyverno
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/part-of: syn
  name: kyverno-service-account
  namespace: syn-kyverno
