tests/golden/policies/kyverno/kyverno/rbac_aggregate_to_cluster_reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  annotations: {}
  labels:
    name: syn-kyverno-aggregate-to-cluster-reader
    rbac.authorization.k8s.io/aggregate-to-cluster-reader: 'true'
  name: syn-kyverno:aggregate-to-cluster-reader
rules:
  - apiGroups:
      - kyverno.io
    resources:
      - clusterpolicies
      - clusteradmissionreports
      - clusterbackgroundscanreports
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - wgpolicy.k8s.io
    resources:
      - clusterpolicyreports
    verbs:
      - get
      - list
      - watch
